--- a/TourV2.Admin/appsettings.Development.json
+++ b/TourV2.Admin/appsettings.Development.json
@@ -11,7 +11,8 @@
   },
   "connectionStrings": {
     //"TourDBConnectionString": "data source=db981684509.hosting-data.io;Initial Catalog=db981684509;user id=dbo981684509;password=Di0606!!Zs1717!!;"
-    "TourDBConnectionString": "data source=195.155.148.117;Initial Catalog=ZSUTourDB;user id=zsutour;password=aNNmf61i2Y7%r;"
+    //"TourDBConnectionString": "data source=195.155.148.117;Initial Catalog=ZSUTourDB;user id=zsutour;password=aNNmf61i2Y7%r;"
+    "TourDBConnectionString": "data source=.;Initial Catalog=GeneralturDB;Integrated Security=True;MultipleActiveResultSets=True;"
   },
   "JwtSettings": {
     "key": "This*Is&A!Long)Key(For%Creating@A$SymmetricKey",
